<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cita.irrigationsystem.irrigationsystem.fragments.StartFragment">

    <LinearLayout
        android:id="@+id/startLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/startTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tv"
            android:textAppearance="@style/main_titles_font"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startLL">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp">

            <ImageView
                android:src="@drawable/start_image"
                android:layout_width="100dp"
                android:layout_height="100dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="@style/main_fields_font"
                android:layout_below="@+id/startTV"/>

            <TextView
                android:id="@+id/nameTextTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_name_text"
                android:textAppearance="@style/main_texts_tont"
                android:layout_below="@+id/startTV"
                android:layout_toRightOf="@+id/nameTV"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/descTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="@style/main_fields_font"
                android:layout_below="@id/nameTV"/>

            <TextView
                android:id="@+id/descTextTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_desc_text"
                android:textAppearance="@style/main_texts_tont"
                android:layout_toEndOf="@id/descTV"
                android:layout_below="@+id/nameTextTV"
                android:layout_toRightOf="@+id/descTV"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/locTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localization"
                android:textAppearance="@style/main_fields_font"
                android:layout_below="@id/descTV"/>

            <TextView
                android:id="@+id/locTextTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_loc_text"
                android:textAppearance="@style/main_texts_tont"
                android:layout_toEndOf="@id/descTV"
                android:layout_below="@+id/descTextTV"
                android:layout_toRightOf="@+id/locTV"
                android:paddingLeft="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_on_map"
                android:textAlignment="center"
                android:layout_below="@id/locTV"
                android:layout_marginTop="20dp"
                android:id="@+id/button" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
