<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cita.irrigationsystem.irrigationsystem.fragments.WeatherInformationFragment">

    <TextView
        android:id="@+id/climaticInfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climatic_info_tv"
        android:textAppearance="@style/main_subtitles_font" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="@style/main_fields_font"
        android:layout_below="@+id/climaticInfoTV" />

    <TextView
        android:id="@+id/nameTextTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climatic_info_name_text"
        android:textAppearance="@style/main_texts_tont"
        android:layout_below="@+id/climaticInfoTV"
        android:layout_toEndOf="@id/nameTV"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/stateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textAppearance="@style/main_fields_font"
        android:layout_below="@+id/nameTV" />

    <TextView
        android:id="@+id/stateTextTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_off_text"
        android:textAppearance="@style/main_texts_tont"
        android:layout_below="@+id/nameTextTV"
        android:layout_toEndOf="@id/stateTV"
        android:paddingLeft="10dp" />

    <GridView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="4"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/stateTV" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/stateTV" />

</RelativeLayout>